fix contrast issue

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ nav ul {
 }
 
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), transparent), url(./img/landing-page.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url(./img/landing-page.jpg);
     min-height: 90vh;
     background-repeat: no-repeat;
     background-size: cover;
